force-app/main/default/objects/Mortgage_Case__c/fields/PreferredRepaymentType__c.field-meta.xml
<CustomField>
    <fullName>PreferredRepaymentType__c</fullName>
    <label>Preferred Repayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capital &amp; interest</fullName>
            </value>
            <value>
                <fullName>Interest Only</fullName>
            </value>
            <value>
                <fullName>No Preference.</fullName>
            </value>
            <value>
                <fullName>Part and Part</fullName>
            </value>
            <value>
                <fullName>Repayment</fullName>
            </value>
            <value>
                <fullName>Interest Only with Repayment vehicle</fullName>
            </value>
            <value>
                <fullName>Pure Interest Only</fullName>
            </value>
            <value>
                <fullName>Part &amp; Part</fullName>
                <isActive>false</isActive>
                <label>Part &amp; Part</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>