force-app/main/default/objects/Mortgage_Case__c/fields/Principal__c.field-meta.xml
<CustomField>
    <fullName>Principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User entered is not a Principal.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Principal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Mortgage_Case</relationshipName>
    <type>Lookup</type>
</CustomField>