force-app/main/default/objects/Mortgage_Case__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>remortgage</fullName>
                <label>Remortgage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>