force-app/main/default/objects/Mortgage_Case__c/fields/Property_is_Multi_block__c.field-meta.xml
<CustomField>
    <fullName>Property_is_Multi_block__c</fullName>
    <label>Property is Multi-block?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>