force-app/main/default/objects/Mortgage_Case__c/fields/Property_maintenance_monthly__c.field-meta.xml
<CustomField>
    <fullName>Property_maintenance_monthly__c</fullName>
    <label>Property Maintenance (monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>