force-app/main/default/objects/Mortgage_Case__c/fields/Property_region__c.field-meta.xml
<CustomField>
    <fullName>Property_region__c</fullName>
    <label>Property Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>Yorkshire And Humberside</fullName>
            </value>
            <value>
                <fullName>East Midlands</fullName>
            </value>
            <value>
                <fullName>Northern Ireland</fullName>
            </value>
            <value>
                <fullName>East of England</fullName>
            </value>
            <value>
                <fullName>Scotland</fullName>
            </value>
            <value>
                <fullName>Wales</fullName>
            </value>
            <value>
                <fullName>Greater London</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>West Midlands</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>