force-app/main/default/objects/Mortgage_Case__c/fields/Property_tenure__c.field-meta.xml
<CustomField>
    <fullName>Property_tenure__c</fullName>
    <label>Property Tenure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Freehold</fullName>
            </value>
            <value>
                <fullName>Leasehold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>