force-app/main/default/objects/Mortgage_Case__c/fields/Property_uprn__c.field-meta.xml
<CustomField>
    <fullName>Property_uprn__c</fullName>
    <label>Property uprn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>