force-app/main/default/objects/Mortgage_Case__c/fields/Purchased_prior_17__c.field-meta.xml
<CustomField>
    <fullName>Purchased_prior_17__c</fullName>
    <label>Purchased Prior 2017</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>