force-app/main/default/objects/Mortgage_Case__c/fields/RatelinketoBOEbaserate__c.field-meta.xml
<CustomField>
    <fullName>RatelinketoBOEbaserate__c</fullName>
    <label>Rate linked to BOE base rate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>