force-app/main/default/objects/Mortgage_Case__c/fields/Reason_client_may_be_vulnerable__c.field-meta.xml
<CustomField>
    <fullName>Reason_client_may_be_vulnerable__c</fullName>
    <label>Reason client may be vulnerable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addiction</fullName>
            </value>
            <value>
                <fullName>Age</fullName>
            </value>
            <value>
                <fullName>Domestic Abuse</fullName>
            </value>
            <value>
                <fullName>Hearing or Visual Impairment</fullName>
            </value>
            <value>
                <fullName>Indebtedness</fullName>
            </value>
            <value>
                <fullName>Long-term Illness</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Mental Capacity</fullName>
            </value>
            <value>
                <fullName>Speaks Foreign Language</fullName>
            </value>
            <value>
                <fullName>Stress</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>