force-app/main/default/objects/Mortgage_Case__c/fields/Recommendations_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommendations_Date__c</fullName>
    <label>Recommendations Stage Start Date</label>
    <type>Date</type>
</CustomField>