force-app/main/default/objects/Mortgage_Case__c/fields/Recommendations_Stage_Date_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommendations_Stage_Date_Date__c</fullName>
    <label>Recommendations Stage End Date</label>
    <type>Date</type>
</CustomField>