force-app/main/default/objects/Mortgage_Case__c/fields/Red_Flag__c.field-meta.xml
<CustomField>
    <fullName>Red_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Red Flag</label>
    <type>Checkbox</type>
</CustomField>