force-app/main/default/objects/Mortgage_Case__c/fields/RemortgageType__c.field-meta.xml
<CustomField>
    <fullName>RemortgageType__c</fullName>
    <label>Remortgage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raise Additional Funds</fullName>
            </value>
            <value>
                <fullName>Cheaper Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>