force-app/main/default/objects/Mortgage_Case__c/fields/Rental_estimate__c.field-meta.xml
<CustomField>
    <fullName>Rental_estimate__c</fullName>
    <label>Rental estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>