force-app/main/default/objects/Mortgage_Case__c/fields/Rental_void_allowance_monthly__c.field-meta.xml
<CustomField>
    <fullName>Rental_void_allowance_monthly__c</fullName>
    <label>Rental Void Allowance (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>