force-app/main/default/objects/Mortgage_Case__c/fields/Savings_account_linked_to_the_mortgage__c.field-meta.xml
<CustomField>
    <fullName>Savings_account_linked_to_the_mortgage__c</fullName>
    <description>Do you require a savings account linked to the mortgage?</description>
    <label>Savings account linked  to the mortgage?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>