force-app/main/default/objects/Mortgage_Case__c/fields/Schooling_Sum__c.field-meta.xml
<CustomField>
    <fullName>Schooling_Sum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Schooling Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>