force-app/main/default/objects/Mortgage_Case__c/fields/Second_applicant_contact__c.field-meta.xml
<CustomField>
    <fullName>Second_applicant_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Applicant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mortgage Cases</relationshipLabel>
    <relationshipName>Mortgage_Cases_Mortgage_Case</relationshipName>
    <type>Lookup</type>
</CustomField>