force-app/main/default/objects/Mortgage_Case__c/fields/Second_Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Second_Applicant_Email__c</fullName>
    <formula>Second_applicant_contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Applicant Email</label>
    <type>Text</type>
</CustomField>