force-app/main/default/objects/Mortgage_Case__c/fields/Second_Applicant_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Second_Applicant_Mobile__c</fullName>
    <formula>Second_applicant_contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Applicant Mobile</label>
    <type>Text</type>
</CustomField>