force-app/main/default/objects/Mortgage_Case__c/fields/Second_Applicant_Title__c.field-meta.xml
<CustomField>
    <fullName>Second_Applicant_Title__c</fullName>
    <formula>Second_applicant_contact__r.Title</formula>
    <label>Second Applicant Title</label>
    <type>Text</type>
</CustomField>