force-app/main/default/objects/Mortgage_Case__c/fields/Service_charge_annual__c.field-meta.xml
<CustomField>
    <fullName>Service_charge_annual__c</fullName>
    <label>Service Charge (Annual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>