force-app/main/default/objects/Mortgage_Case__c/fields/shared_ownership__c.field-meta.xml
<CustomField>
    <fullName>shared_ownership__c</fullName>
    <label>shared ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>