force-app/main/default/objects/Mortgage_Case__c/fields/SourceofDeposit__c.field-meta.xml
<CustomField>
    <fullName>SourceofDeposit__c</fullName>
    <label>Source of Deposit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Gift from family member</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Remortgage of another property</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>