force-app/main/default/objects/Mortgage_Case__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factfind ongoing</fullName>
            </value>
            <value>
                <fullName>Factfind submitted</fullName>
            </value>
            <value>
                <fullName>Recommendations</fullName>
            </value>
            <value>
                <fullName>DIP obtained</fullName>
            </value>
            <value>
                <fullName>FMA submitted</fullName>
            </value>
            <value>
                <fullName>Valuation instructed</fullName>
            </value>
            <value>
                <fullName>Valuation satisfied</fullName>
            </value>
            <value>
                <fullName>Case offered</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>