force-app/main/default/objects/Mortgage_Case__c/fields/SyncedwithMW__c.field-meta.xml
<CustomField>
    <fullName>SyncedwithMW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If record is being created in Salesforce not yest synced with MW and if not record created by MW and it&apos;s synced</description>
    <inlineHelpText>Records synced with Middleware</inlineHelpText>
    <label>SyncedwithMW</label>
    <type>Checkbox</type>
</CustomField>