force-app/main/default/objects/Mortgage_Case__c/fields/To_fix_your_mortgage_cost_for_a_specific__c.field-meta.xml
<CustomField>
    <fullName>To_fix_your_mortgage_cost_for_a_specific__c</fullName>
    <label>To fix your mortgage cost for a period?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>