force-app/main/default/objects/Mortgage_Case__c/fields/Transport_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Transport_Expenses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Transport Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>