force-app/main/default/objects/Mortgage_Case__c/fields/TV_Internet_Communication_Sum__c.field-meta.xml
<CustomField>
    <fullName>TV_Internet_Communication_Sum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TV/Internet Communication Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>