force-app/main/default/objects/Mortgage_Case__c/fields/UndecidedRatetype__c.field-meta.xml
<CustomField>
    <fullName>UndecidedRatetype__c</fullName>
    <label>Rate Type Undecided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>