force-app/main/default/objects/Mortgage_Case__c/fields/Valuation_Instructed_Date__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Instructed_Date__c</fullName>
    <label>Valuation Instructed Stage Start Date</label>
    <type>Date</type>
</CustomField>