force-app/main/default/objects/Mortgage_Case__c/fields/Valuation_Satisfied_Stage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Satisfied_Stage_End_Date__c</fullName>
    <label>Valuation Satisfied Stage End  Date</label>
    <type>Date</type>
</CustomField>