force-app/main/default/objects/Mortgage_Case__c/fields/What_type_of_occupant_are_you__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_occupant_are_you__c</fullName>
    <label>What type of occupant are you?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Correspondence only</fullName>
            </value>
            <value>
                <fullName>Home owner with mortgage</fullName>
            </value>
            <value>
                <fullName>Home owner without mortgage</fullName>
            </value>
            <value>
                <fullName>Living with friends/family</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>