force-app/main/default/objects/Mortgage_Case__c/fields/What_type_of_property_is_this__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_property_is_this__c</fullName>
    <label>What type of property is this?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detached bungalow</fullName>
            </value>
            <value>
                <fullName>Detached house</fullName>
            </value>
            <value>
                <fullName>Purpose built flat/ maisonette</fullName>
            </value>
            <value>
                <fullName>Semi-detached bungalow</fullName>
            </value>
            <value>
                <fullName>Semi-detached house</fullName>
            </value>
            <value>
                <fullName>Terraced house</fullName>
            </value>
            <value>
                <fullName>Converted flat/ maisonette</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>