force-app/main/default/objects/Mortgage_Case__c/fields/Widget_Transport_Value__c.field-meta.xml
<CustomField>
    <fullName>Widget_Transport_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Widget Transport Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>