force-app/main/default/objects/Mortgage_Case__c/fields/Year_property_was_purchased__c.field-meta.xml
<CustomField>
    <fullName>Year_property_was_purchased__c</fullName>
    <label>Year property was purchased?</label>
    <type>Date</type>
</CustomField>