force-app/main/default/objects/Mortgage_Case__c/fields/Yearpropertywasbuilt__c.field-meta.xml
<CustomField>
    <fullName>Yearpropertywasbuilt__c</fullName>
    <label>Year property was built</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>