force-app/main/default/objects/Mortgage_Case__c/fields/Years_remaining_on_lease__c.field-meta.xml
<CustomField>
    <fullName>Years_remaining_on_lease__c</fullName>
    <label>Years Remaining On Lease</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>