force-app/main/default/objects/Mortgage_Case__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>StageName__c</columns>
    <columns>CloseDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>